--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,11 @@
 
 :root{
     --color1:#f7c5c5;
-    --color4:#b15b5b;
     --color2: rgb(230, 225, 225);
     --color3:#ffffff;
+    --color4:#b15b5b;
+    --color5:#6a0f11;
+    --colorform: #6a0f11f8;
 }
 
 *{
@@ -13,7 +15,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 
 body{
     font-family: 'Roboto', sans-serif;
@@ -70,6 +71,34 @@ body{
 .form__group{
     position:relative;
     --color: var(--color2);
+}
+
+.form__select{
+    width: 100%;
+    background: var(--colorform);
+    color: var(--color3);
+    font-size: 1rem;
+    padding: .6em .3em;
+    border: none;
+    outline:none;
+    border-bottom: 1px solid var(--color);
+    font-family: 'Roboto', sans-serif;
+}
+
+.form__select:not(:placeholder-shown){
+    color: var(--color2);
+}
+
+.form__select:focus + .form__label,
+.form__select:not(:placeholder-shown) + .form__label{
+    transform: translateY(-12px) scale(.7);
+    transform-origin: left top;
+    color: var(--color1);
+}
+
+.form__select:focus ~ .form__line,
+.form__select:not(:placeholder-shown) + .form__line{
+    transform: scale(1);
 }
 
 .form__input{
